--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
       <h1 class="main-heading">Homer Gaines</h1>
       <ul class="link-list" role="menu">
-        <li class="link-list__item">
+        <li class="link-list__item" role="menuitem">
           <a
             href="https://www.homergaines.com/"
             class="link-list__link"
@@ -20,7 +20,7 @@
             >Personal Site</a
           >
         </li>
-        <li class="link-list__item">
+        <li class="link-list__item" role="menuitem">
           <a
             href="https://twitter.com/xirclebox"
             class="link-list__link"
@@ -29,7 +29,7 @@
             >Twitter</a
           >
         </li>
-        <li class="link-list__item">
+        <li class="link-list__item" role="menuitem">
           <a
             href="https://www.linkedin.com/in/homergaines/"
             class="link-list__link"
@@ -38,7 +38,7 @@
             >LinkedIn</a
           >
         </li>
-        <li class="link-list__item">
+        <li class="link-list__item" role="menuitem">
           <a
             href="https://music.youtube.com/channel/UC6q3s2LMS9YmUXrnL4vz7cg"
             class="link-list__link"
@@ -47,7 +47,7 @@
             >YouTube Music</a
           >
         </li>
-        <li class="link-list__item">
+        <li class="link-list__item" role="menuitem">
           <a
             href="https://open.spotify.com/artist/0RYjAcmLjU9inmnOyE66aw"
             class="link-list__link"
