--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="description" content="List of links for Developer / Producer, Homer Gaines">
+    <meta name="description" content="List of links for Homer Gaines">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homer Gaines</title>
     <link href="css/styles.css" rel="stylesheet" />
